[tool.poetry]
name = "flask-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
app = "^0.0.1"
python-dotenv = "^0.14.0"
Flask-WTF = "^0.14.3"
Flask-SQLAlchemy = "^2.4.4"
Flask-Migrate = "^2.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
